# p6_report

./: .git_ignore  .gitignore  README.md  TODO.md  master_jacob_script.py
3d_file_lok/: csv_fjer_dupleter.py  fjern_dublet.py  gig_AAUTest97.STL  gig_AAUTest97.csv  lok.py  new_stl_file.stl  start.bash  stl_to_csv.py
PathSnapping/: PathSnapping.py  toolpath_Ideal.txt  toolpath_Operator.txt
implementation/: Classic_DeviantHardenberg.mw  Modified_DeviantHardenberg.mw  PathSnapping.py  Realse_camera_test.py  RoboDK_Placement_update-API_layout.txt  Robot_implmented_rdk.py  Robotdk_test.py  camera_data.py  csv_to_ply.py  decodeing.py  decoding_sample.txt  digital_twin_test.py  functioncal_point_cloud.py  functioncal_point_cloud_2.py  joint_values and Cartesian_INFO.txt  kinematic.py  plot_forvert_kinematics.m  point_cloud.py  point_cloud_v2.py  scouting_path.py  the_program.py
implementation/data/: til.sh
jacobs_project/: Clean.py  big_brick.py  decodeing.py  master_jacob_script.py  mater_jacob_ofline_code.py
p6Python/: 01 path txt  main.py
pcl/: CMakeCache.txt  CMakeLists.txt  ICP.cpp  ICP.h  ICPUtils.cpp  ICPUtils.h  Makefile  boost_py_build.bash  build.bash  cmake_install.cmake  gig_AAUTest97_ransed_lille.csv  localization.cpp  main.cpp  pcd_write  pcd_write.cpp  py_build.bash  py_localization.py  py_localization_server.py  skail_csv.py  test.sh
pcl/csv/: gig_AAUTest97_ransed.csv
pcl/test_data/: output_12.csv  output_all_filtredert.csv
pcl/test_data_2/: output_1.csv  output_10.csv  output_11.csv  output_12.csv  output_13.csv  output_14.csv  output_15.csv  output_16.csv  output_17.csv  output_18.csv  output_19.csv  output_2.csv  output_20.csv  output_21.csv  output_22.csv  output_23.csv  output_24.csv  output_25.csv  output_26.csv  output_27.csv  output_28.csv  output_29.csv  output_3.csv  output_30.csv  output_31.csv  output_32.csv  output_33.csv  output_34.csv  output_35.csv  output_36.csv  output_37.csv  output_38.csv  output_39.csv  output_4.csv  output_40.csv  output_41.csv  output_42.csv  output_43.csv  output_44.csv  output_45.csv  (+11 more)
pybind11/: CMakeLists.txt  python_cpp_test.py  test.cpp
visualtering/: visual.cpp
visualtering_2/: CMakeLists.txt  visual.cpp
